force-app/main/default/objects/Employee__c/Employee__c.object-meta.xml
<CustomObject>
    <label>従業員</label>
    <nameField>
        <displayFormat>EM-{000000}</displayFormat>
        <label>EMPLOYEE MANAGEMENT ID</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>