force-app/main/default/objects/Employee__c/fields/Availableannualleave__c.field-meta.xml
<CustomField>
    <fullName>Availableannualleave__c</fullName>
    <formula>remainingannualleavecurrentyear__c +Remainingannualleaveoflast_year__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available annual leave</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>