force-app/main/default/objects/Employee__c/fields/BANK_ACCOUNT_NUMBER__c.field-meta.xml
<CustomField>
    <fullName>BANK_ACCOUNT_NUMBER__c</fullName>
    <label>BANK ACCOUNT NUMBER</label>
    <length>30</length>
    <type>Text</type>
</CustomField>