force-app/main/default/objects/Employee__c/fields/Birthday__c.field-meta.xml
<CustomField>
    <fullName>Birthday__c</fullName>
    <label>BIRTH DAY</label>
    <required>true</required>
    <type>Date</type>
</CustomField>