force-app/main/default/objects/Employee__c/fields/BonusIncentivePolicy__c.field-meta.xml
<CustomField>
    <fullName>BonusIncentivePolicy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BONUS &amp; INCENTIVE POLICY</label>
    <referenceTo>BonusIncentivesPolicy__c</referenceTo>
    <relationshipLabel>EMPLOYEE</relationshipLabel>
    <relationshipName>EMPLOYEE</relationshipName>
    <type>Lookup</type>
</CustomField>