force-app/main/default/objects/Employee__c/fields/CloHRMStandard__c.field-meta.xml
<CustomField>
    <fullName>CloHRMStandard__c</fullName>
    <label>HR POLICY</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>HRStandard__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>HRStandard__c</referenceTo>
    <relationshipLabel>EMPLOYEE</relationshipLabel>
    <relationshipName>EMPLOYEE_MANAGEMENT</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>