force-app/main/default/objects/Employee__c/fields/ContractStartDate__c.field-meta.xml
<CustomField>
    <fullName>ContractStartDate__c</fullName>
    <label>CONTRACT START DATE</label>
    <type>Date</type>
</CustomField>