force-app/main/default/objects/Employee__c/fields/defaultcurrentyearannualleave__c.field-meta.xml
<CustomField>
    <fullName>defaultcurrentyearannualleave__c</fullName>
    <formula>if(YEAR( ContractStartDate__c )=YEAR(TODAY()), MONTH(today())-MONTH( ContractStartDate__c )+1,MONTH(today())+0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Default current year&apos;s annual leave</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>