force-app/main/default/objects/Employee__c/fields/DependentDeduction__c.field-meta.xml
<CustomField>
    <fullName>DependentDeduction__c</fullName>
    <label>DEPENDENT DEDUCTION</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>