force-app/main/default/objects/Employee__c/fields/EmergencPhone__c.field-meta.xml
<CustomField>
    <fullName>EmergencPhone__c</fullName>
    <label>EMERGENCY PHONE</label>
    <type>Phone</type>
</CustomField>