force-app/main/default/objects/Employee__c/fields/EmployeeID__c.field-meta.xml
<CustomField>
    <fullName>EmployeeID__c</fullName>
    <label>EMPLOYEE ID NUMBER</label>
    <length>30</length>
    <type>Text</type>
</CustomField>