force-app/main/default/objects/Employee__c/fields/expirationdateforupdatepersonalinfo__c.field-meta.xml
<CustomField>
    <fullName>expirationdateforupdatepersonalinfo__c</fullName>
    <inlineHelpText>Input this date, employee will not able to update their information by link.</inlineHelpText>
    <label>Expiration date for update personal info</label>
    <type>Date</type>
</CustomField>