force-app/main/default/objects/Employee__c/fields/Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Full_Name__c</fullName>
    <label>FULL NAME</label>
    <length>255</length>
    <type>Text</type>
</CustomField>