force-app/main/default/objects/Employee__c/fields/FullName__c.field-meta.xml
<CustomField>
    <fullName>FullName__c</fullName>
    <formula>$User.LastName  &amp;  $User.FirstName</formula>
    <label>FULL NAME(old)</label>
    <type>Text</type>
</CustomField>