force-app/main/default/objects/Employee__c/fields/GasolineAllowance__c.field-meta.xml
<CustomField>
    <fullName>GasolineAllowance__c</fullName>
    <label>GASOLINE ALLOWANCE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>