force-app/main/default/objects/Employee__c/fields/GENDER__c.field-meta.xml
<CustomField>
    <fullName>GENDER__c</fullName>
    <label>GENDER</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>gender</valueSetName>
    </valueSet>
</CustomField>