force-app/main/default/objects/Employee__c/fields/GrossBaseSalaryPerMonthLocal__c.field-meta.xml
<CustomField>
    <fullName>GrossBaseSalaryPerMonthLocal__c</fullName>
    <label>GROSS BASE SALARY PER MONTH(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>