force-app/main/default/objects/Employee__c/fields/HomeAddress__c.field-meta.xml
<CustomField>
    <fullName>HomeAddress__c</fullName>
    <label>HOME ADDRESS</label>
    <length>100</length>
    <type>Text</type>
</CustomField>