force-app/main/default/objects/Employee__c/fields/HomePhone__c.field-meta.xml
<CustomField>
    <fullName>HomePhone__c</fullName>
    <label>HOME PHONE</label>
    <type>Phone</type>
</CustomField>