force-app/main/default/objects/Employee__c/fields/HousingAllowance__c.field-meta.xml
<CustomField>
    <fullName>HousingAllowance__c</fullName>
    <label>HOUSING ALLOWANCE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>