force-app/main/default/objects/Employee__c/fields/ID_issued_by__c.field-meta.xml
<CustomField>
    <fullName>ID_issued_by__c</fullName>
    <label>ID issued by</label>
    <length>50</length>
    <type>Text</type>
</CustomField>