force-app/main/default/objects/Employee__c/fields/IncentivesCondition__c.field-meta.xml
<CustomField>
    <fullName>IncentivesCondition__c</fullName>
    <label>INCENTIVES CONDITION</label>
    <type>TextArea</type>
</CustomField>