force-app/main/default/objects/Employee__c/fields/Jobtitle__c.field-meta.xml
<CustomField>
    <fullName>Jobtitle__c</fullName>
    <label>Job title</label>
    <type>TextArea</type>
</CustomField>