force-app/main/default/objects/Employee__c/fields/JoinedDate__c.field-meta.xml
<CustomField>
    <fullName>JoinedDate__c</fullName>
    <label>JOINED DATE</label>
    <type>Date</type>
</CustomField>