force-app/main/default/objects/Employee__c/fields/Married_status__c.field-meta.xml
<CustomField>
    <fullName>Married_status__c</fullName>
    <label>Married status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>Married</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>