force-app/main/default/objects/Employee__c/fields/Meal_Allowance__c.field-meta.xml
<CustomField>
    <fullName>Meal_Allowance__c</fullName>
    <label>Meal Allowance per Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>