force-app/main/default/objects/Employee__c/fields/MealAllowance__c.field-meta.xml
<CustomField>
    <fullName>MealAllowance__c</fullName>
    <label>MEAL ALLOWANCE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>