force-app/main/default/objects/Employee__c/fields/MobilePhone__c.field-meta.xml
<CustomField>
    <fullName>MobilePhone__c</fullName>
    <label>MOBILE PHONE</label>
    <type>Phone</type>
</CustomField>