force-app/main/default/objects/Employee__c/fields/Recruitment_CRM__c.field-meta.xml
<CustomField>
    <fullName>Recruitment_CRM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recruitment CRM</label>
    <referenceTo>Recruitment_CRM__c</referenceTo>
    <relationshipLabel>EMPLOYEE</relationshipLabel>
    <relationshipName>EMPLOYEE</relationshipName>
    <type>Lookup</type>
</CustomField>