force-app/main/default/objects/Employee__c/fields/remainingannualleavecurrentyear__c.field-meta.xml
<CustomField>
    <fullName>remainingannualleavecurrentyear__c</fullName>
    <formula>defaultcurrentyearannualleave__c - Totalannualleaveusedincurrentyear__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining annual leave current year</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>