force-app/main/default/objects/Employee__c/fields/resetannualleave__c.field-meta.xml
<CustomField>
    <fullName>resetannualleave__c</fullName>
    <formula>AND(DAY(TODAY())=4,MONTH(TODAY())=3)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reset Annual Leave</label>
    <type>Checkbox</type>
</CustomField>