force-app/main/default/objects/Employee__c/fields/RoleDetail__c.field-meta.xml
<CustomField>
    <fullName>RoleDetail__c</fullName>
    <label>ROLE DETAIL</label>
    <type>TextArea</type>
</CustomField>