force-app/main/default/objects/Employee__c/fields/RoleType__c.field-meta.xml
<CustomField>
    <fullName>RoleType__c</fullName>
    <label>ROLE TYPE</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>OFFICE WORKER</fullName>
            </value>
            <value>
                <fullName>WAREHOUSE WORKER</fullName>
            </value>
            <value>
                <fullName>DRIVER</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>