force-app/main/default/objects/Employee__c/fields/SelfDeduction__c.field-meta.xml
<CustomField>
    <fullName>SelfDeduction__c</fullName>
    <label>SELF DEDUCTION</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>