force-app/main/default/objects/Employee__c/fields/UniformAllowance__c.field-meta.xml
<CustomField>
    <fullName>UniformAllowance__c</fullName>
    <label>UNIFORM ALLOWANCE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>