force-app/main/default/objects/Employee__c/fields/UserAccountID__c.field-meta.xml
<CustomField>
    <fullName>UserAccountID__c</fullName>
    <formula>UserAccountName__c</formula>
    <label>USER ACCOUNT ID</label>
    <type>Text</type>
</CustomField>