force-app/main/default/objects/Employee__c/fields/UserContactName__c.field-meta.xml
<CustomField>
    <fullName>UserContactName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>USER CONTACT NAME</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>EMPLOYEE</relationshipLabel>
    <relationshipName>EMPLOYEE</relationshipName>
    <type>Lookup</type>
</CustomField>