force-app/main/default/objects/Employee__c/fields/VISA_VALID_TO__c.field-meta.xml
<CustomField>
    <fullName>VISA_VALID_TO__c</fullName>
    <label>VISA VALID TO</label>
    <type>Date</type>
</CustomField>