force-app/main/default/objects/Employee__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>EmployeeID__c</columns>
    <columns>Full_Name__c</columns>
    <columns>CloHRMStandard__c</columns>
    <columns>ContractID__c</columns>
    <columns>WorkingType__c</columns>
    <columns>ContractType__c</columns>
    <columns>departments__c</columns>
    <columns>ContractEndDate__c</columns>
    <columns>MobilePhone__c</columns>
    <columns>HomeAddress__c</columns>
    <columns>Birthday__c</columns>
    <columns>IdNumber__c</columns>
    <columns>Title__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>